# arro-nlp-frontend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml  roadmap.md
.github/workflows/: lint.yml  tests.yml
src/arro_nlp_frontend/: __init__.py  arro_client.py  config.py  embedder.py  ingest.py  main.py  migrate.py  search.py  store.py
tests/: conftest.py  test_config.py  test_embedder.py  test_incremental_ingest.py  test_ingest.py  test_main.py  test_migrate.py  test_search.py  test_store.py
